Added notification taksk (test)

--- a/playbooks/create-ip.yaml
+++ b/playbooks/create-ip.yaml
@@ -80,3 +80,22 @@
         var: hostvars[item]['request_records']
       with_items: "{{ groups['nios'] }}"
       tags: [never, setup]
+
+
+- name: Notify
+  hosts: localhost
+  tasks:
+
+    - name: Notify caller by mail
+      debug:
+        msg: "{{ item.key }}: {{ item.value }}"
+      with_items:
+        - key: tower_user_email
+          value: "{{ tower_user_email | default('') }}"
+        - key: tower_user_id
+          value: "{{ tower_user_id | default('') }}"
+        - key: tower_user_name
+          value: "{{ tower_user_name | default('') }}"
+        - key: tower_user_lastname
+          value: "{{ tower_user_lastname | default('') }}"
+      tags: [never, setup]
