--- a/playbooks/notify-mail.yaml
+++ b/playbooks/notify-mail.yaml
@@ -5,24 +5,40 @@
   gather_facts: no
   tasks:
 
-    - debug:
-        msg: "{{ item.key }}: {{ item.value }}"
-      with_items:
-        - key: tower_user_email
-          value: "{{ tower_user_email | default('') }}"
-        - key: tower_user_id
-          value: "{{ tower_user_id | default('') }}"
-        - key: tower_user_name
-          value: "{{ tower_user_name | default('') }}"
-        - key: tower_user_lastname
-          value: "{{ tower_user_lastname | default('') }}"
-      delegate_to: localhost
-      run_once: yes
-      tags: [always]
+    # - debug:
+    #     msg: "{{ item.key }}: {{ item.value }}"
+    #   with_items:
+    #     - key: tower_user_email
+    #       value: "{{ tower_user_email | default('') }}"
+    #     - key: tower_user_id
+    #       value: "{{ tower_user_id | default('') }}"
+    #     - key: tower_user_name
+    #       value: "{{ tower_user_name | default('') }}"
+    #     - key: tower_user_lastname
+    #       value: "{{ tower_user_lastname | default('') }}"
+    #   delegate_to: localhost
+    #   run_once: yes
+    #   tags: [always]
     
+    # - name: Notify caller by mail
+    #   debug:
+    #     var: request_records
+    #   delegate_to: localhost
+    #   run_once: yes
+    #   tags: [always]
+
     - name: Notify caller by mail
-      debug:
-        var: request_records
+      mail:
+        host: smtp.dt.ept.lu
+        port: 25
+        subject: "{{ notify_subject | default('IPAM - Unknown') }}"
+        body: "{{ request_records | default('') }}"
+        from: ansible@post.lu
+        to: "{{ tower_user_email }}"
+        charset: "utf-8" 
+        subtype: "html"
       delegate_to: localhost
       run_once: yes
+      when:
+        - "tower_user_email | default('') | length > 0"
       tags: [always]
