--- a/playbooks/create-ip.yaml
+++ b/playbooks/create-ip.yaml
@@ -74,7 +74,7 @@
       loop_control:
         loop_var: ipv4
         index_var: count
-      register: request_records
+      register: created_records
       tags: [never, setup]
 
     - name: Create hosts records
@@ -90,43 +90,21 @@
       loop_control:
         loop_var: ipv4
         index_var: count
-      register: request_records
+      register: created_records
       tags: [never]
 
     - set_stats:
         data:
-          request_records: "{{ request_records }}"
+          created_records: "{{ created_records }}"
       tags: [always]
 
 
-- name: Register IP
+- name: Register host records
   hosts: device42
   tasks:
 
-    - name: Register IP
+    - name: Register host records
       debug:
-        var: hostvars[item]['request_records']
+        var: hostvars[item]['created_records']
       with_items: "{{ groups['nios'] }}"
       tags: [never, setup]
-
-
-# - name: Notify
-#   hosts: all
-#   gather_facts: no
-#   tasks:
-
-#     - name: Notify caller by mail
-#       debug:
-#         msg: "{{ item.key }}: {{ item.value }}"
-#       with_items:
-#         - key: tower_user_email
-#           value: "{{ tower_user_email | default('') }}"
-#         - key: tower_user_id
-#           value: "{{ tower_user_id | default('') }}"
-#         - key: tower_user_name
-#           value: "{{ tower_user_name | default('') }}"
-#         - key: tower_user_lastname
-#           value: "{{ tower_user_lastname | default('') }}"
-#       delegate_to: localhost
-#       run_once: yes
-#       tags: [never, setup]
