--- a/playbooks/notify-mail.yaml
+++ b/playbooks/notify-mail.yaml
@@ -5,11 +5,21 @@
   gather_facts: no
   tasks:
 
+    - name: Setup arguments
+      set_fact:
+        notify_status: "{{ notify_status | default('Unknwon tatus') }}"
+        notify_kind: "{{ notify_kind | default('Unknown kind') }}"
+        notify_resource: "{{ notify_resource | default('Unknown resource') }}"
+        notify_message: "{{ notify_message | default('Unknown message') }}"
+        notify_job_approval_id: {{ awx_job_id | default(0) | int + 2 }}
+      tags: [always]
+
+
     - name: Notify - Query
       mail:
         host: smtp.dt.ept.lu
         port: 25
-        subject: "[IPAM] - {{ notify_resource | default('Unknown kind') }} query - {{ notify_status | default('Unknown status') }}"
+        subject: "[IPAM] - {{ notify_resource }} {{ notify_kind }} - {{ notify_status }}"
         body: "{{ lookup('template', '../templates/mail_notification.html.j2') }}"
         from: ansible@post.lu
         to: ["{{ tower_user_email }}"]
@@ -19,20 +29,4 @@
         - "tower_user_email | default('') | length > 0"
       delegate_to: localhost
       run_once: yes
-      tags: [never, query]
-
-    - name: Notify - Setup
-      mail:
-        host: smtp.dt.ept.lu
-        port: 25
-        subject: "[IPAM] - {{ notify_resource | default('Unknown kind') }} setup - {{ notify_status | default('Unknown status') }}"
-        body: "{{ lookup('template', '../templates/mail_notification.html.j2') }}"
-        from: ansible@post.lu
-        to: ["{{ tower_user_email }}"]
-        charset: "utf-8" 
-        subtype: "html"
-      when:
-        - "tower_user_email | default('') | length > 0"
-      delegate_to: localhost
-      run_once: yes
-      tags: [never, setup]
+      tags: [always]
