--- a/playbooks/notify-mail.yaml
+++ b/playbooks/notify-mail.yaml
@@ -7,10 +7,13 @@
 
     - name: Setup arguments
       set_fact:
-        notify_status: "{{ notify_status | default('Unknwon tatus') }}"
+        # Kind and resource should be set at the workflow level
         notify_kind: "{{ notify_kind | default('Unknown kind') }}"
         notify_resource: "{{ notify_resource | default('Unknown resource') }}"
+        # Status and message should be set at the job level
+        notify_status: "{{ notify_status | default('Unknwon tatus') }}"
         notify_message: "{{ notify_message | default('Unknown message') }}"
+        # The job ID is deducted automatically
         notify_job_approval_id: {{ awx_job_id | default(0) | int + 2 }}
       tags: [always]
 
