--- a/playbooks/network.yaml
+++ b/playbooks/network.yaml
@@ -68,7 +68,15 @@
         comment: "Created by the IPAM automation project"
         state: present
         provider: "{{ nios_provider }}"
-      register: created_network
+      # register: created_network
+      tags: [never, setup]
+
+    - name: Set D42 facts
+      set_fact:
+        created_network:
+        network: "{{ request_network }}"
+        network_view: "{{ request_view }}"
+        plateforme: "{{ request_plateforme }}"
       tags: [never, setup]
 
     - name: Report
