--- a/playbooks/network.yaml
+++ b/playbooks/network.yaml
@@ -74,7 +74,8 @@
     - name: Set D42 facts
       set_fact:
         created_network:
-          network: "{{ request_network }}"
+          network: "{{ request_network.split('/)[0] }}"
+          mask_bits: "{{ request_network.split('/)[1] }}"
           network_view: "{{ request_view }}"
           plateforme: "{{ request_plateforme }}"
       tags: [never, setup]
@@ -96,18 +97,18 @@
   hosts: device42
   tasks:
 
-    - name: Register network
-      debug:
-        var: hostvars[item]['created_network']
-      with_items: "{{ groups['nios'] }}"
-      tags: [never, setup]
-
     # - name: Register network
-    #   device42_api:
-    #     meth: POST
-    #     path: api/1.0/subnets
-    #     data:
-    #       network: "{{ hostvars[item]['created_network']['request_network'] }}"
-    #       mask_bits: "25"
+    #   debug:
+    #     var: hostvars[item]['created_network']
     #   with_items: "{{ groups['nios'] }}"
     #   tags: [never, setup]
+
+    - name: Register network
+      device42_api:
+        meth: POST
+        path: api/1.0/subnets
+        data:
+          network: "{{ hostvars[item]['created_network']['network'] }}"
+          mask_bits: "{{ hostvars[item]['created_network']['mask_bits'] }}"
+      with_items: "{{ groups['nios'] }}"
+      tags: [never, setup]
