Updated IP management and mail template

--- a/playbooks/ip.yaml
+++ b/playbooks/ip.yaml
@@ -92,53 +92,53 @@
           request_records: "{{ request_records }}"
       tags: [never, prepare]
 
-    - name: Create records
-      debug:
-        msg: "Would create record {{ record.name }}.{{ record.zone }} at {{ record.ipv4 }} on view {{ record.view }} in network {{ record.network }}"
-      loop: "{{ request_records }}"
-      loop_control:
-        loop_var: record
-        index_var: count
-      tags: [never, setup]
-
     # - name: Create records
-    #   community.general.nios_host_record:
-    #     name: "{{ record.name }}.{{ record.zone }}"
-    #     view: "{{ record.view }}"
-    #     ipv4addrs:
-    #       - ipv4addr: "{{ record.ipv4 }}"
-    #     comment: "Created by the IPAM automation project"
-    #     state: present
-    #     provider: "{{ nios_provider }}"
+    #   debug:
+    #     msg: "Would create record {{ record.name }}.{{ record.zone }} at {{ record.ipv4 }} on view {{ record.view }} in network {{ record.network }}"
     #   loop: "{{ request_records }}"
     #   loop_control:
     #     loop_var: record
     #     index_var: count
-    #   tags: [never, setup]
+    #   tags: [never, setup, debug]
+
+    - name: Create records
+      community.general.nios_host_record:
+        name: "{{ record.name }}.{{ record.zone }}"
+        view: "{{ record.view }}"
+        ipv4addrs:
+          - ipv4addr: "{{ record.ipv4 }}"
+        comment: "Created by the IPAM automation project"
+        state: present
+        provider: "{{ nios_provider }}"
+      loop: "{{ request_records }}"
+      loop_control:
+        loop_var: record
+        index_var: count
+      tags: [never, setup, create]
 
 
 - name: Register host records
   hosts: device42
   tasks:
 
+    # - name: Register host records
+    #   debug:
+    #     msg: "Would register record {{ record.name }}.{{ record.zone }} at {{ record.ipv4 }} on view {{ record.view }} in network {{ record.network }}"
+    #   loop: "{{ hostvars[groups['nios'][0]]['request_records'] }}"
+    #   loop_control:
+    #     loop_var: record
+    #     index_var: count
+    #   tags: [never, setup, register]
+
     - name: Register host records
-      debug:
-        msg: "Would register record {{ record.name }}.{{ record.zone }} at {{ record.ipv4 }} on view {{ record.view }} in network {{ record.network }}"
+      device42_api:
+        meth: POST
+        path: api/1.0/ips
+        data:
+          ipaddress: "{{ record.ipv4 }}"
+          subnet: "{{ record.network }}"
       loop: "{{ hostvars[groups['nios'][0]]['request_records'] }}"
       loop_control:
         loop_var: record
         index_var: count
       tags: [never, setup]
-
-    # - name: Register host records
-    #   device42_api:
-    #     meth: POST
-    #     path: api/1.0/ips
-    #     data:
-    #       ipaddress: "{{ record.ipv4 }}"
-    #       subnet: "{{ record.network }}"
-    #   loop: "{{ hostvars[groups['nios'][0]]['request_records'] }}"
-    #   loop_control:
-    #     loop_var: record
-    #     index_var: count
-    #   tags: [never, setup]
